--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,50 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo {
+  width: 500px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home-page {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items:center;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-header {
+  display: flex;
+  background-color:black;
+  height: 70px;
+  justify-content: space-evenly;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-link {
+  color:blanchedalmond;
+  padding: 10px;
+  display: flex;
+  align-items:center;
+  text-decoration: none;
+  font-size: 1.2em;
+  border-bottom: 5px solid transparent;
+}
+
+.nav-link:hover {
+  border-bottom: 5px solid blanchedalmond;
+  ;
+}
+
+.active-nav {
+  border-bottom: 5px solid blanchedalmond;
+}
+
+.gallery-img {
+  width: 600px;
+  padding: 20px;
+}
+
+.galary-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
